--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="player_one">Player one</string>
     <string name="player_two">Player two</string>
     <string name="counter">Counter</string>
-    <string name="classic_mode">Classic mode</string>
+    <string name="classic_mode">Classic</string>
     <string name="speed_duel">Speed duel</string>
     <string name="loose_text">loose</string>
     <string name="gain_text">gain</string>
